examples/tests/struct_errors.ore
/*
    Stage E.3 — struct error cases. Each function below should produce
    exactly one diagnostic.
*/

Point :: struct
    x : i32
    y : i32

// error: no field 'z' on Point
bad_field :: fn(p: Point) -> i32
    p.z

// error: missing field 'y' in literal of Point
bad_lit_missing :: fn() -> Point
    Point.{ .x = 0 }

// error: no field 'z' on Point
bad_lit_extra :: fn() -> Point
    Point.{ .x = 0, .y = 0, .z = 0 }

// error: arg type mismatch (string can't coerce to i32)
bad_lit_type :: fn() -> Point
    Point.{ .x = "hi", .y = 0 }
